[package]
name = "spamreaper"
version = "0.1.2"
authors = ["Yasuaki Uechi <y@uechi.io> (https://uechi.io/)"]
license = "Apache-2.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]
